# springernature_api_client

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  opslevel.yml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  validate-opslevel.yml
examples/: meta.py  metadata.py  openaccess.py  tdm.py
src/springernature_api/: __init__.py  api_client.py  exceptions.py  logging_config.py  metadata.py  tdm.py  utils.py
src/springernature_api_client/: api_client.py  config.py  logging_config.py  meta.py  metadata.py  openaccess.py  tdm.py
tests/: test_api_client.py  test_config.toml  test_exceptions.py  test_meta.py  test_metadata.py  test_openaccess.py  test_tdm.py  test_utils.py
