[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "springernature_api"
version = "0.0.3"
authors = [
    { name = "Springer Nature", email = "supportapi@springernature.com" },
]
description = "Springer Nature API Wrapper"
readme = "README.md"
dependencies = [
    "requests", "python-dotenv", "pandas", "openpyxl"
]
keywords = ["API", "Springer Nature", "wrapper", "requests"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]
