[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "springernature_api_client"
version = "0.0.2"
authors = [
    { name = "Springer Nature", email = "supportapi@springernature.com" },
]
description = "Springer Nature API Client"
readme = "README.md"
dependencies = [
    "requests", "python-dotenv", "pandas", "openpyxl"
]
keywords = ["API", "Springer Nature", "client", "requests"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]
