[tool.poetry]
name = "springernature_api_client"
version = "0.0.6"
license = "MIT"
description = "Springer Nature API Client"
authors = ["Springer Nature <supportapi@springernature.com>"]
readme = "README.md"
keywords = ["API", "Springer Nature", "client", "requests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
include = ["LICENSE", "CONTRIBUTING.md"]

[tool.poetry.dependencies]
python = ">=3.9"
requests = "^2.28.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
package-name = ">=0.1,<0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"