[springernature_api]
name = springernature_api
version = 0.0.3
author = Springer Nature
author_email = supportapi@springernature.com
description = Springer Nature API Wrapper
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src